--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
