--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "setup": "node src/utils/setupDB.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,5 @@
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
-    "open": "^9.1.0"
   }
 }
